Changing styles by dropdown menu content, fixing overflow content and include hover effect

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -4,15 +4,16 @@
    Air BnB clone project
 */
 
+/* Menu Bar container */
 .filters {
     background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    display: block;
 }
 
+/* Search button */
 section.filters button {
     font-size: 18px;
     background-color: #FF5A5F;
@@ -25,10 +26,12 @@ section.filters button {
     float: right;
 }
 
+/* Search button hover effect */
 section.filters button:hover {
     opacity: 90%;
 }
 
+/* Location block */
 .locations {
     height: 100%;
     width: 25%;
@@ -38,6 +41,7 @@ section.filters button:hover {
     float: left;
 }
 
+/* Amenities block */
 .amenities {
     height: 100%;
     width: 25%;
@@ -46,40 +50,59 @@ section.filters button:hover {
     float: left;
 }
 
+/* Location and Aminties H3 title style */
 .locations h3, .amenities h3 {
     font-weight: 600;
     padding-left: 50px;
     margin-bottom: 0;
 }
 
+/* Location and Aminties H4 title style */
 .locations h4, .amenities h4 {
     font-weight: 400;
     font-size: 14px;
     padding-left: 50px;
-    margin-top: 6px;
+    margin-top: 0px;
 }
 
+/* Dropdown menu */
 .popover {
-    display: block;
+    display: none;
     background-color: #FAFAFA;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     width: 100%;
     position: absolute;
-    left: 0;
-    top: 70px;
-    list-style-type: none;
-    margin: 0;
-    padding: 0 0 0 30px;
-}
-
-.popover ul{
-    list-style-type: none;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
+/* Dropdown menu style by locations sub list*/
+.locations .popover li ul {
+    margin: 0;
+    padding-left: 50px;
+    list-style: none;
+}
 
+/* Dropdown menu style by Amenities list */
+.amenities .popover li {
+    margin: 0;
+    padding-left: 50px;
+}
+
+/* Dropdown menu Locations for hover effect */
+.locations:hover .popover {
+    display: block;
+}
+
+/* Dropdown menu Amenities for hover effect */
+.amenities:hover .popover {
+    display: block;
+}
+
+/* Drowndown menu style by H2 title*/
 .popover h2 {
     font-size: 16px;
+    padding-left: 35px;
 }
